# github-actions-optimizer

./: .bandit  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  DEPENDENCY_SECURITY.md  GITHUB_CLI_BEST_PRACTICES.md  LICENSE  LICENSE_COMPATIBILITY.md  MANIFEST.in  README.md  SECURITY.md  extension.yml  gh-actions-optimizer  gh-actions-optimizer-new  github-actions-optimizer.py  pyproject.toml  requirements-dev.in  requirements.in  requirements.txt  sonar-project.properties  test_refactoring.py
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/workflows/: auto-approve-workflows.yml  ci.yml  codeql.yml  main.yml  pre-commit.yml  security-incident-response.yml  security-incident-response.yml.backup  security-test-simple.yml  workflow-failure-tracker.yml  workflow-status-monitor.yml
docs/: SECURITY_BEST_PRACTICES.md  github-actions-optimizer-lessons-learned.md  input-validation.md  pr-quality-comments.md  security-automation-summary.md  security-hardening.md  security-incident-response-automation.md  workflow-failure-tracker.md
gh_actions_optimizer/: __init__.py  main.py
gh_actions_optimizer/analyze/: __init__.py  command.py  workflow.py
gh_actions_optimizer/benchmark/: __init__.py  command.py
gh_actions_optimizer/cost/: __init__.py  calculator.py  command.py
gh_actions_optimizer/generate/: __init__.py
gh_actions_optimizer/generate/runner_setup/: __init__.py  command.py
gh_actions_optimizer/generate/sbom/: __init__.py  command.py
gh_actions_optimizer/generate/workflow_patch/: __init__.py  command.py
gh_actions_optimizer/runners/: __init__.py  command.py
gh_actions_optimizer/security/: __init__.py  command.py
gh_actions_optimizer/shared/: __init__.py  cli.py  config.py  data.py  github.py  output.py  security.py  subprocess.py  validation.py
gh_actions_optimizer/validate/: __init__.py
gh_actions_optimizer/validate/runners/: __init__.py  command.py
scripts/: __init__.py  sort_properties.py
tests/: __init__.py  conftest.py  test_caching_implementation.py  test_cli.py  test_cli_utils.py  test_cli_validation.py  test_config.py  test_extension.py  test_generate_sbom.py  test_github.py  test_github_utils.py  test_github_validation.py  test_new_structure.py  test_output_security.py  test_refactoring.py  test_security.py  test_security_command.py  test_security_hardening.py  test_security_improvements.py  test_security_infrastructure.py  test_sort_properties.py  test_subprocess.py  test_validation.py  test_version_consistency.py  test_workflow_failure_tracker.py
