[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-actions-optimizer"
version = "0.1.0-dev"
description = "GitHub CLI extension for optimizing GitHub Actions workflows"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Torsten Marco Knodt", email = "torstenmarco@gmx.de" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Systems Administration",
]
keywords = [
    "github",
    "actions",
    "ci-cd",
    "optimization",
    "cost-analysis",
    "security",
    "devops",
    "cli",
    "github-cli",
    "extension",
]
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",  # Modern terminal handling with automatic capability detection
    "PyYAML>=6.0.0", # YAML processing for configuration and output formats
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "isort>=5.13.0",
    "bandit>=1.7.5",
    "pre-commit>=3.6.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "coverage>=7.4.0",
    "types-PyYAML>=6.0.0",  # Type stubs for PyYAML
    "pip-audit>=2.6.0",  # Dependency vulnerability scanning
    "safety>=3.0.0",  # Additional dependency security scanning
    "detect-secrets>=1.4.0",  # Comprehensive secret detection
]

[project.urls]
Homepage = "https://github.com/datas-world/github-actions-optimizer"
Repository = "https://github.com/datas-world/github-actions-optimizer.git"
Issues = "https://github.com/datas-world/github-actions-optimizer/issues"
Documentation = "https://github.com/datas-world/github-actions-optimizer#readme"

[project.scripts]
gh-actions-optimizer = "gh_actions_optimizer:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gh_actions_optimizer*"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["gh_actions_optimizer"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
implicit_reexport = false
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["gh_actions_optimizer"]
omit = ["*/tests/*", "*/test_*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]
# Fail on any security issues for strict security requirements
assert_used = true
# Additional security checks
tests = ["B101", "B102", "B103", "B104", "B105", "B106", "B107", "B108", "B110", "B112", "B201", "B301", "B302", "B303", "B304", "B305", "B306", "B307", "B308", "B309", "B310", "B311", "B312", "B313", "B314", "B315", "B316", "B317", "B318", "B319", "B320", "B321", "B322", "B323", "B324", "B325", "B401", "B402", "B403", "B404", "B405", "B406", "B407", "B408", "B409", "B410", "B411", "B412", "B413", "B501", "B502", "B503", "B504", "B505", "B506", "B507", "B601", "B602", "B603", "B604", "B605", "B606", "B607", "B608", "B609", "B610", "B611", "B701", "B702", "B703"]

[tool.pip-audit]
# Dependency vulnerability scanning configuration
desc = true
format = "json"
output = ".pip-audit-report.json"
progress-spinner = false
requirement = ["requirements.txt"]
strict = true
# Fail on any vulnerabilities
vulnerability-scan = true

[tool.safety]
# Safety configuration for dependency scanning
json = true
output = ".safety-report.json"
# Fail on any vulnerabilities  
exit-zero = false
